--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -19,7 +19,7 @@
   </div>
   </div>
 
-  <div class="form-row">
+  <div class="form-row -projects">
     <div class="row">
       <div class="column small-12 medium-6">
         <div id="organization-types" class="c-select"></div>
@@ -30,7 +30,7 @@
     </div>
   </div>
 
-  <div class="form-row">
+  <div class="form-row -projects">
     <div class="row">
       <div class="column small-12 medium-6">
         <div id="organizations" class="c-select"></div>
@@ -41,11 +41,11 @@
     </div>
   </div>
 
-  <div class="form-row">
+  <div class="form-row -projects">
     <div class="row">
       <div class="column small-12 medium-6">
         <div id="funding-sources" class="c-select"></div>
-      </div>      
+      </div>
     </div>
   </div>
 
