--- a/app/assets/javascripts/templates/filter_bar.hbs
+++ b/app/assets/javascripts/templates/filter_bar.hbs
@@ -2,9 +2,15 @@
   <div class="wrapper">
     <h3>Filter by:</h3>
     <ul>
-      {{#each filters}}
-        <li>{{this.value}}</li>
-      {{/each}}
+      {{#if all}}
+        {{#each filters}}
+          <li>{{this.value}}</li>
+        {{/each}}
+      {{else}}
+        {{#each filters}}
+          {{#unless projects}}<li>{{this.value}}</li>{{/unless}}
+        {{/each}}
+      {{/if}}
     </ul>
   </div>
 {{/if}}
