Project form common validations

--- a/app/assets/javascripts/templates/project_form.hbs
+++ b/app/assets/javascripts/templates/project_form.hbs
@@ -21,6 +21,7 @@
             <h3 class="c-title">Start date</h3>
             <div class="start-date"></div>
             <div id="pickadate-start" class="pickadate-container" autofocus></div>
+            <p class="c-required">* Field required</p>
           </div>
         </div>
         <div class="column small-12 medium-6">
@@ -28,6 +29,7 @@
             <h3 class="c-title">End date</h3>
             <div class="end-date"></div>
             <div id="pickadate-end" class="pickadate-container" autofocus></div>
+            <p class="c-required">* Field required</p>
           </div>
         </div>
       </div>
