Home: featured widgets

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,3 +10,22 @@
 <section class="l-grid" id="content">
   <%= render 'home/list' %>
 </section>
+
+<section class="l-content wrapper">
+  <div class="c-widget-featured">
+    <div class="row collapse align-center">
+      <div class="column small-3">
+        <div id="widgets-select"></div>
+      </div>
+      <div class="column small-12">
+        <div id="widgets-graph" class="c-graph"></div>
+      </div>
+    </div>
+  </div>
+
+  <div class="c-spinner -start">
+   <div class="spinner-box">
+     <div class="icon"></div>
+   </div>
+ </div>
+</section>
