Country: posts size

--- a/app/views/countries/_mobile_show_intro.html.erb
+++ b/app/views/countries/_mobile_show_intro.html.erb
@@ -29,7 +29,7 @@
         </div>
         <div class="column small-12">
           <h3>Posts</h3>
-          <span class="amount"><%= @country.size %></span>
+          <span class="amount"><%= @posts.size %></span>
         </div>
       </div>
     </div>
