--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -16,7 +16,8 @@
             </h3>
           <% end %>
           <h2><%= link_to e.title, event_path(e.slug_or_id) %></h2>
-          <p><%= truncate(e.description.html_safe, :length => 300) %></p>
+          <% description = e.description.html_safe %>
+          <p><%= truncate_html(e.description, :length => 300, :omission => "...").html_safe %></p>
 
           <% if controller_name === 'users' && is_owner?(@user, current_user) %>
             <% if can? :update, e %>
