Events required messages & dates required

--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -131,6 +131,10 @@ label {
   padding-top: 0;
 }
 
+p.required.-error {
+  color: red;
+}
+
 .error {
   font-size: $small-font-size;
   margin-top: 0;
