--- a/app/views/network_events/_form.html.erb
+++ b/app/views/network_events/_form.html.erb
@@ -37,9 +37,11 @@
       <div class="row">
         <div class="column small-12 medium-5 medium-offset-1">
           <div id="pickadate-start" class="c-pickadate"></div>
+          <p class="required">* Required field</p>
         </div>
         <div class="column small-12 medium-5">
           <div id="pickadate-end" class="c-pickadate"></div>
+          <p class="required">* Required field</p>
         </div>
       </div>
     </div>
@@ -145,6 +147,9 @@
             method: :delete, data: { confirm: 'Are you sure?' } %>
       <% end %>
     </div>
+  </div>
+
+  <div>
   </div>
 
 <% end %>
