--- a/app/assets/javascripts/templates/dropdown.hbs
+++ b/app/assets/javascripts/templates/dropdown.hbs
@@ -3,15 +3,9 @@
   <div class="dropdown-value js-open">{{current.name}}</div>
   <div class="dropdown-content{{#if open}} -open{{/if}}{{#if contentClassName}} {{contentClassName}}{{/if}}">
     {{#each options}}
-      <div class="dropdown-item">
+      <div class="dropdown-item {{#if selected}} -selected{{/if}}">
         <a class="js-option" data-value="{{value}}" name="{{name}}">{{name}}</a>
       </div>
     {{/each}}
   </div>
-  {{#if arrows}}
-    <div class="arrows js-arrows-action">
-      <svg class="c-icon icon-arrow_up -small -active"><use xlink:href="#icon-arrow_up"></use></svg>
-      <svg class="c-icon icon-arrow_down -small"><use xlink:href="#icon-arrow_down"></use></svg>
-    </div>
-  {{/if}}
 </div>
