--- a/app/views/events/_list.html.erb
+++ b/app/views/events/_list.html.erb
@@ -17,6 +17,21 @@
           <% end %>
           <h2><%= link_to e.title, event_path(e.slug_or_id) %></h2>
           <% description = e.description.html_safe %>
+
+
+          <p>
+            <% if e.start_date.present? %>
+              <span><%= e.start_date %></span>
+            <% else %>
+              <span>-</span>
+            <% end %>
+            /
+            <% if e.end_date.present? %>
+              <span><%= e.end_date %></span>
+            <% else %>
+              <span>-</span>
+            <% end %>
+          </p>
           <p><%= truncate_html(e.description, :length => 300, :omission => "...").html_safe %></p>
 
           <% if controller_name === 'users' && is_owner?(@user, current_user) %>
