--- a/app/views/home/_list.html.erb
+++ b/app/views/home/_list.html.erb
@@ -37,6 +37,20 @@
               <% end %>
               <h2><%= link_to featured.title, event_path(featured.slug_or_id) %></h2>
               <p><%= truncate(featured.description.html_safe, :length => 300) %></p>
+              <p>
+                <% if featured.start_date.present? %>
+                  <span><%= featured.start_date %></span>
+                <% else %>
+                  <span>-</span>
+                <% end %>
+                /
+                <% if featured.end_date.present? %>
+                  <span><%= featured.end_date %></span>
+                <% else %>
+                  <span>-</span>
+                <% end %>
+              </p>
+
             </div>
           </div>
 
