--- a/app/views/projects/_net_list.html.erb
+++ b/app/views/projects/_net_list.html.erb
@@ -20,7 +20,7 @@
           <p>
             <% p.specialities.each do |sp| %>
               <span class="c-tag -mg -darker">
-                <%= sp.name %>
+                <%= link_to sp.name, speciality_path(sp.slug_or_id) %>
               </span>
             <% end %>
           </p>
