--- a/app/assets/javascripts/templates/ranking.hbs
+++ b/app/assets/javascripts/templates/ranking.hbs
@@ -1,4 +1,9 @@
-<h2>{{name}}</h2>
+<h2>
+  {{name}}
+  <button type="button" name="button" class="c-btn -secondary -icon js-btn-info">
+    <svg class="c-icon -small -inverse"><use xlink:href="#icon-info"></use></svg>
+  </button>
+</h2>
 {{#if data}}
   <p class="hint">*Estimated age-standardized rate per 100,000 adults</p>
   <table>
