--- a/app/views/events/_info.html.erb
+++ b/app/views/events/_info.html.erb
@@ -56,7 +56,7 @@
       <% end %>
       <% if @event.participants.present? %>
         <div class="sidebar-item">
-          <h3><%= t 'participants' %>(s)</h3>
+          <h3>Key Participant(s)</h3>
           <ul class="c-list">
             <% @participants.each do |p| %>
               <li class="list-item -mg-less">
