--- a/app/views/network_events/_form.html.erb
+++ b/app/views/network_events/_form.html.erb
@@ -64,7 +64,7 @@
       </div>
 
       <div class="column small-12 medium-5">
-        <h4 class="c-title">Participants</h4>
+        <h4 class="c-title">Key Participants</h4>
         <%= f.input :participants, as: :string, placeholder: "George Weinstock, Coralia Bueno Muino", label: false %>
       </div>
     </div>
