--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -27,7 +27,23 @@
                     <% else %>
                       <div class="container">
                         <ul class="list -filled">
-                          <%= render @notifications %>
+                          <% @notifications.each do |notification|  %>
+                            <li class="">
+                              <%= link_to notification do %>
+                                <p class="group">
+                                  <strong><%= notification.notificable_group %> </strong>
+                                  <span class="time"><%= notification.timestamp %></span>
+                                </p>
+                                <p><%= notification.notificable_title %></p>
+                              <% end %>
+                            </li>
+
+                            <% if !browser.device.mobile? %>
+                              <li class="-btn js-action-delete">
+                                <%= link_to 'Delete all', mark_all_as_read_notifications_path, method: :put %>
+                              </li>
+                            <% end %>
+                          <% end %>
                         </ul>
                       </div>
                     <% end %>
