Search: truncate html safe

--- a/app/views/search/index.html.erb
+++ b/app/views/search/index.html.erb
@@ -59,7 +59,7 @@
             <h3 class="-underlined"><%= search.class.name %></h3>
             <h2><%= link_to search.try(:title) || search.try(:name), build_search_link(search.class.name, search.slug_or_id) %></h2>
             <% if search.try(:summary).present? || search.try(:description).present? %>
-              <p><%= truncate(search.try(:summary) || search.try(:description), length: 150, omission: '...') %></p>
+              <p><%= truncate_html(search.try(:summary) || search.try(:description), :length => 150, :omission => "...").html_safe %></p>
             <% end %>
           </div>
         </div>
