Events: key participants

--- a/app/views/events/_mobile_show_intro.html.erb
+++ b/app/views/events/_mobile_show_intro.html.erb
@@ -17,7 +17,7 @@
               </svg>
             </div>
             <h3><%= @event.participants.present? ? @event.participants.split(',').length : 0 %>
-              Participants</h3>
+              Key Participants</h3>
           </div>
         </div>
       </div>
