Move delete message icon to conversation

--- a/app/views/messages/_list.html.erb
+++ b/app/views/messages/_list.html.erb
@@ -11,14 +11,16 @@
           </div>
           <div class="conversation-body">
             <ul class="messages">
+              <li>
+                <%= link_to delete_message_path(conv), method: :delete, class: 'btn-remove'  do %>
+                  <svg class="c-icon icon-remove -secondary">
+                    <use xlink:href="#icon-remove"></use>
+                  </svg>
+                <% end %>
+              </li>
               <% conv.messages.each do |m| %>
                 <% message_person = sender(m.sender_id) %>
                 <li class="c-conversations-item <%= (m.sender_id == current_user.id) ? '-mine' : '-theirs' %>">
-                  <%= link_to delete_message_path(m), method: :delete, class: 'btn-remove'  do %>
-                    <svg class="c-icon icon-remove -secondary">
-                      <use xlink:href="#icon-remove"></use>
-                    </svg>
-                  <% end %>
                   <div class="sender">
                     <h3><%= message_person === current_user ? 'You' : message_person.investigator.try(:name) ||  '(' + message_person.try(:name) + ')' %></h3>
                     <small><%= m.created_at.strftime("%d.%m.%Y") %> <%= m.created_at.strftime("%H:%M")%></small>
