--- a/app/views/messages/_list.html.erb
+++ b/app/views/messages/_list.html.erb
@@ -6,18 +6,18 @@
         <div class="c-card -messages -thin c-conversation<%= unread ? ' -unread' : '' %>" data-conver-id="<%= conv.id %>">
           <div class="conversation-subject js-subject-action">
             <% conversation_person = conversation_person(conv) %>
-            <h2><%= conv.subject %></h2>
+            <h2>
+              <%= link_to delete_message_path(conv), method: :delete, class: 'btn-remove js-btn-remove'  do %>
+                <svg class="c-icon icon-remove -secondary">
+                  <use xlink:href="#icon-remove"></use>
+                </svg>
+              <% end %>
+              <%= conv.subject %>
+            </h2>
             <h3><%= conversation_person.investigator.try(:name) %> (<%= conversation_person.try(:name) %>)</h3>
           </div>
           <div class="conversation-body">
             <ul class="messages">
-              <li>
-                <%= link_to delete_message_path(conv), method: :delete, class: 'btn-remove'  do %>
-                  <svg class="c-icon icon-remove -secondary">
-                    <use xlink:href="#icon-remove"></use>
-                  </svg>
-                <% end %>
-              </li>
               <% conv.messages.each do |m| %>
                 <% message_person = sender(m.sender_id) %>
                 <li class="c-conversations-item <%= (m.sender_id == current_user.id) ? '-mine' : '-theirs' %>">
