Project: validate url message

--- a/app/assets/javascripts/templates/form/input.hbs
+++ b/app/assets/javascripts/templates/form/input.hbs
@@ -16,6 +16,8 @@
   {{#if max}}max="{{max}}"{{/if}}
   {{#if checked}}checked="true"{{/if}}
   {{#if disabled}}disabled="true"{{/if}}
+  {{#if pattern}}pattern="{{pattern}}"{{/if}}
+  {{#if title}}title="{{title}}"{{/if}}
 />
 {{#if info}}
   <span> {{info}}</span>
