--- a/app/assets/javascripts/templates/post_form.hbs
+++ b/app/assets/javascripts/templates/post_form.hbs
@@ -23,4 +23,12 @@
       </div>
     </div>
   </div>
+
+  <div class="form-row">
+    <div class="row">
+      <div class="column small-12 medium-6">
+        <div id="specialities" class="c-select"></div>
+      </div>
+    </div>
+  </div>
 </div>
