--- a/app/views/about/index.html.erb
+++ b/app/views/about/index.html.erb
@@ -71,7 +71,7 @@
         <p>For more suggestions on how to get started using the Map, see the <%= link_to 'FAQ', faqs_path %>.</p>
         <p>If you would like to contribute to the GO Map, or provide feedback to the management team, we can be reached at <a href="mailto:data@globalonc.org">data@globalonc.org</a>.</p>
         <h2>Acknowledgments</h2>
-        <p>The GO Map was made possible through an initial alliance between the <a href="https://www.cancer.gov/about-nci/organization/cgh">U.S. National Cancer Institute Center for Global Health and Global Oncology, Inc.</a> The American Society for Clinical Oncology and Union for International Cancer Control also contributed scientific and programmatic input. The website was developed by the creative digital agency <a href="http://www.vizzuality.com/" target="_blank">Vizzuality</a>.</p>
+        <p>The GO Map was made possible through an initial alliance between the <a href="https://www.cancer.gov/about-nci/organization/cgh">U.S. National Cancer Institute Center for Global Health </a> and <a href="http://globalonc.org/">Global Oncology, Inc</a>. The American Society for Clinical Oncology and Union for International Cancer Control also contributed scientific and programmatic input. The website was developed by the creative digital agency <a href="http://www.vizzuality.com/" target="_blank">Vizzuality</a>.</p>
       </div>
     </div>
   </div>
