Events: bug solved

--- a/app/views/network_events/_form.html.erb
+++ b/app/views/network_events/_form.html.erb
@@ -6,7 +6,6 @@
   method: action === 'new' ?
     :post :
     :patch do |f| %>
-  <p class="required">* Required fields</p>
 
   <div class="form-row row">
     <div class="column small-12">
@@ -29,11 +28,11 @@
     <div class="form-row">
       <div class="row">
         <div class="column small-12 medium-5 medium-offset-1">
-          <div id="pickadate-start" class="c-pickadate"></div>
+          <div id="pickadate-start" class="c-pickadate" data-value="<%= f.object.start_date %>"></div>
           <p class="required">* Required field</p>
         </div>
         <div class="column small-12 medium-5">
-          <div id="pickadate-end" class="c-pickadate"></div>
+          <div id="pickadate-end" class="c-pickadate" data-value="<%= f.object.end_date %>"></div>
           <p class="required">* Required field</p>
         </div>
       </div>
@@ -86,7 +85,7 @@
         <div class="column small-12 medium-5 medium-offset-1">
           <h4 class="c-title">Countries</h4>
           <% f.input :country, as: :select, collection: Country.all.pluck(:country_name), label: false %>
-          <div id="countries" class="c-select"></div>
+          <div id="countries" class="c-select" data-value="<%= f.object.country %>"></div>
           <p class="required">* Required field</p>
         </div>
 
