Fix click menu button in iOS

--- a/app/assets/stylesheets/layouts/_header.scss
+++ b/app/assets/stylesheets/layouts/_header.scss
@@ -9,3 +9,15 @@
   max-width: rem(259px);
   margin: $base-space 0;
 }
+
+.menu-button {
+  position: relative;
+  width: 100%;
+
+  .js-hamburger-menu {
+    position: absolute;
+    right: 0;
+    top: -10px;
+    cursor: pointer;
+  }
+}
