--- a/app/views/shared/_header_mobile.html.erb
+++ b/app/views/shared/_header_mobile.html.erb
@@ -7,8 +7,8 @@
         <% end %>
       </div>
       <div class="column small-2 align-middle">
-        <nav class="c-nav -main">
-          <svg class="c-icon icon-menu -primary js-hamburger-menu">
+        <nav class="menu-button -main">
+          <svg class="c-icon icon-menu -primary js-hamburger-menu -big">
             <use xlink:href="#icon-menu"></use>
           </svg>
         </nav>
