--- a/app/assets/stylesheets/components/_menu_mobile.scss
+++ b/app/assets/stylesheets/components/_menu_mobile.scss
@@ -2,7 +2,8 @@
 .c-menu-mobile {
   position: absolute;
   top: 0;
-  right: 0;
+  // right: 0;
+  left: -100000px;
   height: 100vh;
   width: 0;
   z-index: 6;
@@ -15,6 +16,9 @@
 
 
   &.-active {
+    top: 0;
+    right: 0;
+    left: auto;
     opacity: 1;
     width: 100vw;
 
