Max Zoom for clusters

--- a/app/assets/javascripts/views/map_view.js.erb
+++ b/app/assets/javascripts/views/map_view.js.erb
@@ -20,7 +20,8 @@
       scrollWheelZoom: false,
       basemap: null,
       attributionControl: false,
-      zoom: 3
+      zoom: 3,
+      maxZoom: 17
     },
 
     template: HandlebarsTemplates['carto_layer_tooltip'],
