Autocomplete: first steps

--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -33,7 +33,7 @@
   <div class="form-row -projects">
     <div class="row">
       <div class="column small-12 medium-6">
-        <div id="organizations" class="c-select"></div>
+        <div id="organizations" class="c-autocomplete"></div>
       </div>
       <div class="column small-12 medium-6">
         <div id="project-types" class="c-select"></div>
