--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,7 @@
 //= require pickadate/classic
 //= require pickadate/classic.date
 //= require c3
+//= require jquery-tokeninput
 
 @import
   "settings",
