--- a/app/assets/javascripts/templates/post_form.hbs
+++ b/app/assets/javascripts/templates/post_form.hbs
@@ -16,7 +16,7 @@
   <div class="form-row">
     <div class="row">
       <div class="column small-12 medium-6">
-        <div id="organizations" class="c-select"></div>
+        <div id="organizations" class="c-autocomplete"></div>
       </div>
       <div class="column small-12 medium-6">
         <div id="cancer-types" class="c-select"></div>
