--- a/app/views/data/_cancer_types.erb
+++ b/app/views/data/_cancer_types.erb
@@ -1,1 +1,17 @@
 <div id="cancerRanking" class="row collapse"></div>
+
+<div id="graphicWidgets" class="l-content wrapper -hidden">
+  <div class="c-data">
+    <div class="row collapse">
+      <div class="column small-12 medium-8 large-8">
+        <div id="widgets-graph" class="c-graph"> </div>
+      </div>
+      <div class="column small-12 medium-4 large-4">
+        <div>
+          <h2>Cancer type information</h2>
+          <div id="widgets-select"> </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
