--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,7 @@
+<script>
+var AUTH_TOKEN = "<%= @user.authentication_token %>"
+</script>
+
 <div class="l-content">
   <div class="wrapper">
     <div class="row">
