ProjectNew: organization form updated

--- a/app/assets/javascripts/templates/organization_form.hbs
+++ b/app/assets/javascripts/templates/organization_form.hbs
@@ -25,11 +25,12 @@
   </div>
 
   <div class="row">
-    <div class="column small-12 medium-6">
-      <div id="organizationlatitude" class="c-select"></div>
-    </div>
-    <div class="column small-12 medium-6">
-      <div id="organizationlongitude" class="c-select"></div>
+    <div id="organizationlatitude" class="c-input"></div>
+    <div id="organizationlongitude" class="c-input"></div>
+
+    <div class="column small-12">
+      <label>Organization location</label>
+      <div id="map" class="c-map -relative -target"></div>
     </div>
   </div>
 
