--- a/app/assets/javascripts/views/map_view.js.erb
+++ b/app/assets/javascripts/views/map_view.js.erb
@@ -29,7 +29,9 @@
     initialize: function(settings) {
       var opts = (settings && settings.options) || {};
       this.options = _.extend({}, this.defaults, opts);
-      this.createMap();
+
+      if (!this.options.nocreate) this.createMap();
+
     },
 
     /**
