--- a/app/assets/stylesheets/components/_project-form.scss
+++ b/app/assets/stylesheets/components/_project-form.scss
@@ -118,7 +118,7 @@
 .c-modal-investigator, .c-modal-organization{
 
   & label{
-    margin: 10px 0 0 0;
+    margin: 30px 0 5px 0;
   }
 
   & p.c-required{
