--- a/app/views/shared/_footer_mobile.html.erb
+++ b/app/views/shared/_footer_mobile.html.erb
@@ -48,7 +48,7 @@
       </div>
       <div class="row collapse">
         <div class="column small-6">
-          <%= link_to 'FAQ', faq_path if Rails.application.routes.url_helpers.respond_to?(:faq_path) %>
+          <%= link_to 'FAQ', faq_path if path_exists?(:faq_path) %>
         </div>
       </div>
     </div>
@@ -68,7 +68,7 @@
           <%= link_to (t 'countries'), countries_path %>
         </div>
         <div class="column small-6">
-          <%= link_to (t 'about'), about_path if Rails.application.routes.url_helpers.respond_to?(:about_path) %>
+          <%= link_to (t 'about'), about_path if path_exists?(:about_path) %>
         </div>
       </div>
     </div>
