Specialities added to filters

--- a/app/assets/javascripts/templates/filter_form.hbs
+++ b/app/assets/javascripts/templates/filter_form.hbs
@@ -46,6 +46,9 @@
       <div class="column small-12 medium-6">
         <div id="funding-sources" class="c-select"></div>
       </div>
+      <div class="column small-12 medium-6">
+        <div id="specialities" class="c-select"></div>
+      </div>
     </div>
   </div>
 
