Organizaiot: follow is now allowed

--- a/app/views/network_events/_form.html.erb
+++ b/app/views/network_events/_form.html.erb
@@ -110,7 +110,7 @@
 
       <div class="form-row row">
         <div class="column small-12 medium-10 medium-offset-1">
-          <h4 class="c-title">Latitude</h4>
+          <h4 class="c-title">Location</h4>
           <p class="hint">Select the location where you want to show your event on the map</p>
           <div id="map" class="c-map -relative -target"></div>
           <%= f.hidden_field :latitude, label: false %>
