Rganization followable amendments

--- a/app/views/organizations/_mobile_show_intro.html.erb
+++ b/app/views/organizations/_mobile_show_intro.html.erb
@@ -1,4 +1,4 @@
-<%= render 'shared/user_actions_mobile' %>
+<%= render 'shared/user_actions_mobile', direction: '-vertical' %>
 
 <div class="l-app-title">
   <div class="row collapse -centered">
