--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,8 @@
     <%= Gon::Base.render_data %>
     <%= javascript_include_tag 'lazy_load' %>
     <%# Lazy load: include here async libs like google analytics %>
+    <%= javascript_include_tag 'https://maps.googleapis.com/maps/api/js?key=AIzaSyA0-i-ew8pNli6NQo2QHQRRHgRNBVUhrts&libraries=places', async: true %>
+
     <%= javascript_include_tag 'https://www.google-analytics.com/analytics.js', async: true %>
     <%= javascript_include_tag 'https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInitGFW', async: true %>
   </head>
