--- a/app/views/network_events/_form.html.erb
+++ b/app/views/network_events/_form.html.erb
@@ -112,6 +112,9 @@
         <div class="column small-12 medium-10 medium-offset-1">
           <h4 class="c-title">Location</h4>
           <p class="hint">Select the location where you want to show your event on the map</p>
+          <div id="map-search">
+            <input type="text" id="map-search-input">
+          </div>
           <div id="map" class="c-map -relative -target"></div>
           <%= f.hidden_field :latitude, label: false %>
           <%= f.hidden_field :longitude, label: false %>
