--- a/app/sql_queries/projects_map_countries.sql.erb
+++ b/app/sql_queries/projects_map_countries.sql.erb
@@ -32,7 +32,7 @@ from projects
       inner join cancer_types on cancer_types_projects.cancer_type_id = cancer_types.id
     <% end %>
     <% if @params[:specialities] %>
-      inner join projects_pecialities on projects_pecialities.project_id = projects.id
+      inner join projects_specialities on projects_specialities.project_id = projects.id
       inner join specialities on projects_specialities.speciality_id = specialities.id
     <% end %>
     <% if @params[:user] %>
@@ -61,7 +61,7 @@ from projects
       and cancer_types.id in <%= "#{'(' + @params[:cancer_types].join(',') + ')'}" %>
     <% end %>
     <% if @params[:specialities] %>
-      and specialities.id in <%= "#{'(' + @params[:cancer_types].join(',') + ')'}" %>
+      and specialities.id in <%= "#{'(' + @params[:specialities].join(',') + ')'}" %>
     <% end %>
     <% if @params[:regions] %>
       and countries.region_iso in <%= @params[:regions].to_s.gsub('[', '(').gsub(']',')').gsub('"',"'") %>
