Search functionality added

--- a/app/assets/javascripts/templates/organization_form.hbs
+++ b/app/assets/javascripts/templates/organization_form.hbs
@@ -30,7 +30,12 @@
 
     <div class="column small-12">
       <label>Organization location</label>
-      <div id="map" class="c-map -relative -target"></div>
+      <div class="c-map-container">
+        <div id="map-search" class="c-map-search">
+          <input type="text" id="map-search-input">
+        </div>
+        <div id="map" class="c-map -relative -target"></div>
+      </div>
     </div>
   </div>
 
