--- a/app/views/network_events/_form.html.erb
+++ b/app/views/network_events/_form.html.erb
@@ -112,10 +112,12 @@
         <div class="column small-12 medium-10 medium-offset-1">
           <h4 class="c-title">Location</h4>
           <p class="hint">Select the location where you want to show your event on the map</p>
-          <div id="map-search">
-            <input type="text" id="map-search-input">
+          <div class="c-map-container">
+            <div id="map-search" class="c-map-search">
+              <input type="text" id="map-search-input">
+            </div>
+            <div id="map" class="c-map -relative -target"></div>
           </div>
-          <div id="map" class="c-map -relative -target"></div>
           <%= f.hidden_field :latitude, label: false %>
           <%= f.hidden_field :longitude, label: false %>
         </div>
@@ -135,7 +137,7 @@
 
   <div class="form-row row">
     <div class="column small-12 medium-5 medium-offset-1">
-      <%= f.button :submit, "Submit", class: 'c-btn -primary' %>
+      <%= f.button :submit, "Submit", type: 'button', id: 'btn-submit', class: 'c-btn -primary' %>
       <% if action === 'edit' %>
           <%= link_to (t 'delete'), user_event_path(current_user.id, @event.slug_or_id),
             class: 'c-btn -primary -inverse -mg-left',
