Layers: allow layers having more than one group

--- a/app/assets/javascripts/templates/layers.hbs
+++ b/app/assets/javascripts/templates/layers.hbs
@@ -31,7 +31,7 @@
                   <div class="layers-item">
                     <div class="layer">
                       <div class="switch round tiny">
-                        <input class="switch-input" type="radio" id="{{layer.slug}}" name="layer" value="{{layer.slug}}">
+                        <input class="switch-input" type="checkbox" id="{{layer.slug}}" name="layer" value="{{layer.slug}}">
                         <label class="switch-paddle" for="{{layer.slug}}"></label>
                       </div>
                       <label class="switch-title" for="{{layer.slug}}">{{layer.name}}</label>
@@ -52,7 +52,7 @@
             <div class="layers-item">
               <div class="layer">
                 <div class="switch round tiny">
-                  <input class="switch-input" type="radio" id="{{layer.slug}}" name="layer" value="{{layer.slug}}">
+                  <input class="switch-input" type="checkbox" id="{{layer.slug}}" name="layer" value="{{layer.slug}}">
                   <label class="switch-paddle" for="{{layer.slug}}"></label>
                 </div>
                 <label class="switch-title" for="{{layer.slug}}">{{layer.name}}</label>
