Download button and logo fix

--- a/app/assets/stylesheets/components/_btn.scss
+++ b/app/assets/stylesheets/components/_btn.scss
@@ -112,6 +112,12 @@
     &:hover {
       background-color: darken($primary-color, 5%);
     }
+
+    &.-secondary-action {
+      &:hover {
+        background-color: darken($secondary-color, 5%);
+      }
+    }
   }
 
   // Social login
