Use number instead of true false inside radioteraphy tooltip

--- a/app/assets/javascripts/templates/infowindow.hbs
+++ b/app/assets/javascripts/templates/infowindow.hbs
@@ -67,23 +67,23 @@
             </tr>
             <tr>
               <td>Particle accelerator</td>
-              <td>{{#if particle_accelerator}}true{{else}}false{{/if}}</td>
+              <td>{{particle_accelerator}}</td>
             </tr>
             <tr>
               <td>Linear accelerator</td>
-              <td>{{#if linear_accelerator}}true{{else}}false{{/if}}</td>
+              <td>{{linear_accelerator}}</td>
             </tr>
             <tr>
               <td>Radionuclide teletherapy</td>
-              <td>{{#if radionuclide_teletherapy}}true{{else}}false{{/if}}</td>
+              <td>{{radionuclide_teletherapy}}</td>
             </tr>
             <tr>
               <td>Simulator</td>
-              <td>{{#if simulator}}true{{else}}false{{/if}}</td>
+              <td>{{simulator}}</td>
             </tr>
             <tr>
               <td>X Ray generator</td>
-              <td>{{#if x_ray_generator}}true{{else}}false{{/if}}</td>
+              <td>{{x_ray_generator}}</td>
             </tr>
           </tbody>
         </table>
