--- a/app/views/investigators/_list.html.erb
+++ b/app/views/investigators/_list.html.erb
@@ -18,7 +18,7 @@
           </div>
           <div>
             <h2><%= link_to e.name, investigator_path(e.slug_or_id) %></h2>
-            <% e.organizations.each do |o|%>
+            <% e.organizations.distinct.each do |o|%>
               <h3><%= link_to o.name, organization_path(o.slug_or_id) %></h3>
               <h3><%= o.addresses.map{|a| [a.city, a.country_name]}.uniq.join(', ') %></h3>
             <% end %>
