--- a/app/views/projects/_desktop_show_intro.html.erb
+++ b/app/views/projects/_desktop_show_intro.html.erb
@@ -3,7 +3,7 @@
   <div id="map" class="c-map"></div>
 </div>
 
-<%= render "shared/legend_projects" %>
+<%= render "shared/legend_people" %>
 
 <div class="l-app-title">
   <div class="wrapper">
